<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_16">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />

        <RelativeLayout
            android:id="@+id/destinationRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/bg_blue_border"
            android:padding="@dimen/margin_16">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTv"
                android:layout_marginTop="@dimen/margin_4"
                android:text="@string/description"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/destinationEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTv"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_toStartOf="@id/goBtn"
                android:hint="@string/destination"
                android:textSize="@dimen/medium_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/goBtn"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTv"
                android:layout_alignParentEnd="true"
                android:enabled="false"
                android:text="@string/let_s_go"
                android:textAllCaps="false" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/topUsersTitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/top_users"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topUsersRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:overScrollMode="never" />

        <ProgressBar
            android:id="@+id/prgBar"
            android:layout_width="@dimen/margin_32"
            android:layout_height="@dimen/margin_32"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>