<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIv"
                android:layout_width="@dimen/margin_40"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pageTitleTv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/fromEt"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/from"
        android:textSize="@dimen/medium_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/destinationEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fromEt"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:hint="@string/destination"
        android:textSize="@dimen/medium_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseDateBtn"
        style="@style/AppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationEt"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/choose_date"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseDateBtn"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchBtn"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_16"
        android:enabled="false"
        android:text="@string/search"
        android:textAllCaps="false" />

</RelativeLayout>